0.72.0 (??)
  * Extending sorting to more types: boolean, short, int, long, float, double, Date, and String fields are now supported
  * Better support for Java 7 and 8 in the annotations processor
  * Better support for the Eclipse annotations processor
  * Add Eclipse dupport to the distribution file

0.71.0 (07 Oct 2014)
  * Simplified the release artifact to a single Jar file
  * Added support for Eclipse
  * Added support for deploying to Maven
  * Throw exception if nested write transactions are used (it's not allowed)
  * Javadoc updated
  * Fixed bug in RealmResults: https://github.com/realm/realm-java/issues/453
  * New annotation @Index to add search index to a field (currently only supporting String fields)
  * Made the annotations processor more verbose and strict
  * Adding RealmQuery.count() method
  * Added a new example about concurrency
  * Upgrading to core 0.84.0

0.70.1 (30 Sep 2014)
  * Enable unit testing for the realm project
  * Fixed handling of camel-cased field names

0.70.0 (29 Sep 2014)
  * This is the first public beta release